overlaping timestamp in reply fix

--- a/unused/customization_shorthash.css
+++ b/unused/customization_shorthash.css
@@ -58,6 +58,11 @@ ul[aria-label="Channels"]>.sectionDivider__629e4 {
 
 
 /* ////////////////////////////// chat \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
+/* overlaping timestamp in reply fix */
+.vc-reply-timestamp {
+  width: unset !important;
+}
+
 /* Collapsible chat actions */
 /* https://github.com/moonself/Vencord-Repos */
 .buttons__74017 {
